[gd_scene load_steps=7 format=3 uid="uid://fg0f2k8v1awh"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_r0a7g"]
[ext_resource type="PackedScene" uid="uid://dhbbm5041trc4" path="res://scenes/floor/floor.tscn" id="2_6bpqa"]
[ext_resource type="PackedScene" uid="uid://c0wf7fbjl13s5" path="res://scenes/gravestone/grave_stone.tscn" id="2_ml182"]
[ext_resource type="PackedScene" uid="uid://dt3fo3fwl0qba" path="res://scenes/skeleton/skeleton.tscn" id="3_cpvke"]
[ext_resource type="PackedScene" uid="uid://ddek6nkrldmfv" path="res://scenes/ScrollingBg/scrolling_bg.tscn" id="4_2exva"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hnegi"]

[node name="Game" type="Node2D"]
script = ExtResource("1_r0a7g")
gravestone_scene = ExtResource("2_ml182")

[node name="StaticBody2D" parent="." instance=ExtResource("2_6bpqa")]
position = Vector2(-5, 267)

[node name="Skeleton" parent="." instance=ExtResource("3_cpvke")]
position = Vector2(51, 189)

[node name="ScrollingBg" parent="." instance=ExtResource("4_2exva")]

[node name="GraveStoneSpawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="GraveStoneHolder" type="Node" parent="."]

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(245, 423)
scale = Vector2(22.5528, 40.9911)
shape = SubResource("RectangleShape2D_hnegi")
shape_visible = false
action = "jump"

[connection signal="timeout" from="GraveStoneSpawnTimer" to="." method="_on_gravestone_spawn_timer_timeout"]
